--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -11,29 +11,36 @@
 
 set $mod Mod4
 
-for_window [class=".*"] border pixel 0
 
+# Gaps config
+for_window [class=".*"] border pixel 0
 gaps inner 5
 gaps outer 0
 smart_gaps on
 smart_borders no_gaps
-
 new_window pixel 0
 hide_edge_borders both
-# font pango:Roboto Bold 8
-font pango:Overpass SemiBold 10
+font pango:Fira Code 10
 
-# Set the wallpaper
+# Set up wallpaper rotation
 exec --no-startup-id $HOME/.config/i3/scripts/wallpaper.sh --rotate
 
 # Startup apps
 exec --no-startup-id flameshot
 exec --no-startup-id redshift
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-exec_always --no-startup-id "killall -q compton; compton --dbus"
+exec_always --no-startup-id "killall -q compton; compton --dbus &"
+exec --no-startup-id xss-lock -- ~/.config/i3/scripts/lock.sh
+
+# Lock screen
+bindsym $mod+l exec ~/.config/i3/scripts/lock.sh
 
 # Screenshot
 bindsym Print exec "flameshot gui"
+
+# Float windows by default
+for_window [class="Thunar"] floating enable
+for_window [class="Nm-connection-editor"] floating enable
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -82,6 +89,9 @@ bindsym $mod+space focus mode_toggle
 
 # focus the parent container
 bindsym $mod+a focus parent
+
+# Jump to urgent window
+bindsym $mod+x [urgent=latest] focus
 
 # focus the child container
 #bindsym $mod+d focus child
@@ -141,12 +151,6 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 5 px or 5 ppt
-        bindsym k resize grow height 5 px or 5 ppt
-        bindsym l resize shrink height 5 px or 5 ppt
-        bindsym semicolon resize grow width 5 px or 5 ppt
-
-        # same bindings, but for the arrow keys
         bindsym Left resize shrink width 5 px or 5 ppt
         bindsym Down resize grow height 5 px or 5 ppt
         bindsym Up resize shrink height 5 px or 5 ppt
@@ -159,9 +163,6 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
-
-# Lock screen
-bindsym $mod+l exec ~/.config/i3/scripts/lock.sh
 
 # Volume control
 bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master 5%+
